--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,25 @@ ul li {
   list-style-type: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 .logo {
   color: rgba(77, 90, 229, 1);
   font-family: "Raleway", sans-serif;
@@ -47,6 +66,38 @@ ul li {
   cursor: pointer;
 }
 
+/* Header */
+.header {
+  border-bottom: 1px solid rgba(236, 236, 236, 1);
+  padding: 24px 0;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-nav {
+  display: flex;
+}
+
+.header-menu {
+  display: flex;
+  margin-left: 76px;
+  column-gap: 40px;
+  align-items: center;
+}
+
+.header-link {
+  display: flex;
+}
+
+.header-link-ul {
+  display: flex;
+  align-items: center;
+  column-gap: 40px;
+}
+
 .header-link-contact {
   color: rgba(67, 68, 85, 1);
   font-size: 16px;
@@ -55,6 +106,7 @@ ul li {
   letter-spacing: 0.02em;
   text-decoration: none;
   font-style: normal;
+  column-gap: 40px;
 }
 
 .header-link-contact:hover,
@@ -78,13 +130,18 @@ ul li {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
+  padding: 200px 0;
 }
 
 .features-section-title {
+  max-width: 700;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
+  padding-left: auto;
+  padding-right: auto;
+  margin: 0 auto 72px;
 }
 
 .features-section-button {
@@ -97,6 +154,13 @@ ul li {
   line-height: 1.5;
   letter-spacing: 0.64px;
   border: 0px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 16px 32px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .features-section-button:hover,
@@ -106,20 +170,36 @@ ul li {
 }
 
 .first-section {
+  padding-bottom: 120px;
+  padding-top: 120px;
+}
+
+.first-section-title {
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
-.first-section-title {
+.first-section-list {
+  display: flex;
+  column-gap: 24px;
+}
+
+.first-section-container {
+  width: calc((100% - 72px) / 4);
+}
+
+.first-section h3 {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .first-section-text {
@@ -131,6 +211,8 @@ ul li {
 
 .hero-section {
   background-color: #f4f4fd;
+  padding-bottom: 120px;
+  padding-top: 120px;
 }
 
 .hero-section-title {
@@ -140,16 +222,88 @@ ul li {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+  padding-bottom: 72px;
+}
+
+.persons-images {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.persons-text {
+  padding: 32px 0;
+  text-align: center;
+}
+
+.hero-section h3 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .hero-section-fone {
   background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
+  background: var(--WHITE, #fff);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.portfolio-section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.portfolio-section-title {
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  padding-bottom: 72px;
+}
+
+.portfolio-section-card {
+  border: 1px solid #e7e9fc;
+  background-color: #fff;
+  margin-bottom: 48px;
+}
+
+.portfolio-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.portfolio-card-content {
+  padding: 32px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 }
 
 .footer {
   background-color: rgba(46, 47, 66, 1);
+  padding-top: 101.5px;
+  padding-bottom: 100px;
 }
 
 .footer-text {
+  margin-top: 17.5px;
   color: rgba(244, 244, 253, 1);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  font-style: normal;
+  font-weight: 400;
 }
