--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,8 @@ ul {
   padding: 0 15px;
 }
 
-.logo {
-  color: rgba(77, 90, 229, 1);
+.logo-header-nav {
+  color: #4d5ae5;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 1.17;
@@ -40,6 +40,9 @@ ul {
   letter-spacing: 0.54px;
   text-transform: uppercase;
   text-decoration: none;
+  margin-right: 76px;
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
 .logo-black {
@@ -50,25 +53,22 @@ ul {
   color: rgba(244, 244, 253, 1);
 }
 
-.menu-nav {
-  color: rgba(46, 47, 66, 1);
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-  text-decoration: none;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-.menu-nav:hover,
-.menu-nav:focus {
+.menu-nav-li:hover,
+.menu-nav-li:focus {
   color: #404bbf;
   cursor: pointer;
 }
 
 /* Header */
 .header {
-  border-bottom: 1px solid rgba(236, 236, 236, 1);
+  display: flex;
+  border-bottom: 1px solid #e7e9fc;
   padding: 24px 0;
 }
 
@@ -77,25 +77,37 @@ ul {
   justify-content: space-between;
 }
 
-.header-nav {
+.header-nav-menu {
   display: flex;
-}
-
-.header-menu {
-  display: flex;
-  margin-left: 76px;
-  column-gap: 40px;
   align-items: center;
 }
 
-.header-link {
+.menu-nav-li {
+  color: rgba(46, 47, 66, 1);
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  text-decoration: none;
+  padding: 24px 0;
+}
+
+.header-menu-link {
+  display: flex;
+  margin-left: 76px;
+  gap: 40px;
+  align-items: center;
+}
+
+.header-link-address {
   display: flex;
 }
 
 .header-link-ul {
   display: flex;
   align-items: center;
-  column-gap: 40px;
+  gap: 40px;
 }
 
 .header-link-contact {
@@ -130,11 +142,11 @@ ul {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
-  padding: 200px 0;
+  padding: 188px 0;
 }
 
 .features-section-title {
-  max-width: 700;
+  max-width: 496px;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
@@ -160,6 +172,7 @@ ul {
   margin-right: auto;
   display: block;
   padding: 16px 32px;
+  min-width: 169px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
@@ -182,18 +195,19 @@ ul {
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
+  visibility: hidden;
 }
 
 .first-section-list {
   display: flex;
-  column-gap: 24px;
+  gap: 24px;
 }
 
 .first-section-container {
   width: calc((100% - 72px) / 4);
 }
 
-.first-section h3 {
+.first-section-h3 {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -222,7 +236,7 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 .persons-images {
@@ -268,33 +282,37 @@ ul {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
-  padding-bottom: 72px;
-}
-
-.portfolio-section-card {
-  border: 1px solid #e7e9fc;
-  background-color: #fff;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
 }
 
 .portfolio-images {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio-section-card {
+  border: 1px solid #e7e9fc;
+  background-color: #fff;
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-card-content {
-  padding: 32px 16px;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  gap: 8px;
   align-self: stretch;
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+}
+
+.portfolio-card-content h3 {
+  margin-bottom: 8px;
 }
 
 .footer {
   background-color: rgba(46, 47, 66, 1);
-  padding-top: 101.5px;
+  padding-top: 100px;
   padding-bottom: 100px;
 }
 
