--- a/css/styles.css
+++ b/css/styles.css
@@ -68,8 +68,17 @@ img {
 
 /* Header */
 .header {
+  display: flex;
   border-bottom: 1px solid #e7e9fc;
   padding: 24px 0;
+}
+.header-container-defolt {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .header-container-div {
